the AlumiManagementSystem project

--- a/AlumiManagementSystem/WebContent/login.html
+++ b/AlumiManagementSystem/WebContent/login.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>用户登录</title>
 <link  href="css/login_style.css" type="text/css" rel="stylesheet"/>
+<link href="images/icon.png" type="image/x-icon" rel="shortcut icon"/>
 <script type = "text/javascript">
 	function check(){
 		var admName = document.getElementById("admName").value;
